// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repeat does not render when children are array 1`] = `null`;

exports[`Repeat does not render when count is zero or negative 1`] = `null`;

exports[`Repeat does not render when count is zero or negative 2`] = `null`;

exports[`Repeat does not wrap when count is one 1`] = `
<h1>
  1
</h1>
`;

exports[`Repeat renders children 3 times 1`] = `
<div>
  <h1>
    1
  </h1>
  <h1>
    1
  </h1>
  <h1>
    1
  </h1>
</div>
`;
